# ballade

./: .gitmodules  CMakeLists.txt  README.md
include/: demo.h  model.h
include/gfx/: header.h  shaders.h
libs/: CMakeLists.txt
src/: demo.cpp  model.cpp
src/gfx/: model.cpp  shaders.cpp
